ccm_add_headers(
        basic.hpp
        compare.hpp
        expo.hpp
        fmanip.hpp
        hyper.hpp
        nearest.hpp
        numbers.hpp
        power.hpp
        special.hpp
        trig.hpp
)

add_subdirectory(basic)
add_subdirectory(compare)
add_subdirectory(expo)
add_subdirectory(fmanip)
add_subdirectory(hyper)
add_subdirectory(nearest)
add_subdirectory(power)
add_subdirectory(special)
add_subdirectory(trig)
